...
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/button_prev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/button_prev"
            android:layout_width="@dimen/image_button_width"
...
            android:enabled="@{viewModel.previousStepAvailable}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/space"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="@dimen/image_button_width"
            android:layout_height="@dimen/image_button_width"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_button_next"
            android:contentDescription="@string/next"
...
