<resources>
    <string name="app_name">Baking Time</string>
    <string name="title_recipe_details">Recipe Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="number_format">%1$d.</string>
    <string name="title_activity_recipe_step_details">Recipe Step</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="servings">Servings: %d</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="error_loading_recipes">Unable to load recipes. Please try again later.</string>
    <string name="try_again">Try again</string>
    <string name="step_thumbnail">Step Thumbnail</string>
    <string name="loading_recipes">Loading recipes …</string>
    <string name="progress_bar">Progress bar</string>
    <string name="refresh_recipes">Refresh Recipes</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
</resources>
